# claude-visual-interface

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mise.toml  pyproject.toml
daemon/: activity_relay.py  agent_session.py  backfill_sidecars.py  config.py  db.py  files.py  findings.py  gitref.py  hub.py  main.py  mcp_server.py  messages.py  review_runner.py  reviews.py  session_sidecar.py  sessions.py  titles.py  token_usage.py  view_state.py
daemon/migrations/: 001_session.sql  002_finding.sql  003_session_agent_session_id.sql  004_chat_only.sql  005_message.sql  006_token_usage.sql  007_session_user_title.sql  008_session_starred_at.sql  009_message_ask_payload.sql
tests/: test_activity_relay.py  test_agent_session.py  test_config.py  test_dev_emit.py  test_file_endpoint.py  test_findings.py  test_findings_wire.py  test_gitref.py  test_health.py  test_hub.py  test_mcp_server.py  test_messages.py  test_migrations.py  test_review_runner.py  test_reviews.py  test_session_sidecar.py  test_sessions.py  test_titles.py  test_token_usage.py  test_view_control.py  test_view_state.py  test_ws_route.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: ActivityFeed.test.tsx  ActivityFeed.tsx  App.tsx  ArtifactPane.test.tsx  ArtifactPane.tsx  BackgroundTasks.test.tsx  BackgroundTasks.tsx  ChatInput.test.tsx  ChatInput.tsx  CodePane.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FindingsPanel.test.tsx  FindingsPanel.tsx  HomePage.test.tsx  HomePage.tsx  Markdown.test.tsx  Markdown.tsx  NewChatLanding.test.tsx  Surface.tsx  (+20 more)
